<resources>
    <string name="app_name">My Notes App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_note">Создать новую заметку</string>
    <string name="note_name">Название заметки</string>
    <string name="note_description">Текст заметки</string>
    <string name="date_create">дата создания</string>
    <string name="note_save">Сохранить изменения</string>
    <string name="foto">Фото</string>
    <string name="pick">картинка</string>
    <string name="audio">аудио</string>
    <string name="doc">Документ</string>
    <string name="about">О программе</string>
    <string name="find">Найти</string>
    <string name="about_txt">Это приложение было созданно в процессе моего нелегкого обучения на ITшника. Чтобы вернуться назад, нажми кнопочку ниже ↓. P.S. Здравствуйте преподаватель! Улыбнитесь!</string>
    <string name="back_to_app">Вернуться в приложение</string>
    <string name="delete">Удалить</string>
    <string name="send">Отправить</string>
    <string name="settings">Настройки</string>
    <string name="navigation_drawer_open">"Open navigation drawer "</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>