<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_find"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/find"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_create_new_note"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/create_new_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_note"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

</menu>